</head>
<body>
<div class=menu>
<p><table id="navigation">
<tr>
<th><a href="index.html">Home</a></th>
<th><a href="music.html">Music</a></th>
<th><a href="software.html">Software</a></th>
<th><a href="art.html">Art</a></th>
<th><a href="words.html">Words</a></th>
<th><a href="contact.html">Contact</a></th>
</tr>
</table>
</div>
<div id=body>
<!--  content goes HERE  -->

<p>Read: <a href="https://trommelmusic.com/featured/chris-korda-a-voice-for-the-future/">Chris Korda: A voice for the future</a> in Trommel

<p>See: <a href="https://8billionangels.org/">8 Billion Angels</a>, a film about overpopulation

<p>Buy: <a href="https://abonnement.sopress.net/common/product-article/1048">10-page article on CK & CoE</a> in Big Bang mag

<p>Read: <a href="https://www.theransomnote.com/music/articles/apologize-to-the-future-chris-korda-on-the-crisis-facing-our-planet/">Chris Korda on the crisis facing our planet</a> in Ransom Note

<p>Buy: <a href="https://www.diggersfactory.com/vinyl/230007/chris-korda-the-church-of-euthanasia-eight-billion-humans-cant-be-wrong">Eight Billion Humans Can't Be Wrong 2x12"</a>

<p>Read: <a href="https://www.pagina12.com.ar/328424-la-musica-electronica-esta-muerta">&iquest;La m&uacute;sica electr&oacute;nica est&aacute; muerta?</a> in Pagina/12

<p>Listen: <a href="https://www.vice.com/fr/article/y3g7yw/vice-presente-chris-korda-man-of-the-future">Marc-Aur&egrave;le Baly interviews Chris Korda for VICE France</a> (English translation <a href="https://www.churchofeuthanasia.org/press/rinse_france.html">here</a>)

<p>Read: <a href="https://www.documentjournal.com/2021/03/chris-kordas-booklist-for-black-pilled-environmentalists/">Chris Korda&rsquo;s booklist for black-pilled environmentalists</a>

<p>Buy: <a href="https://shop.mentalgroove.ch/merch">Church of Euthanasia T-Shirts</a>

<p>Listen: <a href="https://chriskorda.bandcamp.com/album/apologize-to-the-future">Apologize to the Future album</a>
