@@ -32,6 +32,7 @@
 <li><a href="https://soundcloud.com/chris_korda">SoundCloud</a>
 <li><a href="https://www.residentadvisor.net/dj/chriskorda">ResidentAdvisor</a>
 <li><a href="#performances">List of past and future performances</a>
+<li><a href="https://victimofleisure.github.io/Polymeter/tools/tracks.html">List of tracks including polymeter usage</a>
 </ul>
 
 <h3>Discography</h3>
@@ -49,7 +50,7 @@
 <td>Passion For Numbers</td>
 <td>Mental Groove</td>
 <td>MG135</td>
-<td>late 2021</td>
+<td>2022</td>
 <td>12" + Digital</td>
 </tr>
 <tr>
@@ -188,6 +189,12 @@
 <th>Venue</th>
 <th>City</th>
 <th>Country</th>
+</tr>
+<tr>
+<td>11/05/21</td>
+<td>Tempio del Futuro Perduto</td>
+<td>Milan</td>
+<td>Italy</td>
 </tr>
 <tr>
 <td>10/01/21</td>
