@@ -23,6 +23,8 @@
 <div id=body>
 <!--  content goes HERE  -->
 
+<p>Read: <a href="https://victimofleisure.github.io/Polymeter/helpframe.html">Polymeter Help</a> (or as a <a href="https://victimofleisure.github.io/Polymeter/Help/printable/PolymeterHelp.htm">single page</a>)
+
 <p>Read: <a href="https://trommelmusic.com/featured/chris-korda-a-voice-for-the-future/">Chris Korda: A voice for the future</a> in Trommel
 
 <p>See: <a href="https://8billionangels.org/">8 Billion Angels</a>, a film about overpopulation
